use instanceof pattern matching and Stream.toList