@@ -9,7 +9,6 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.CompletionException;
-import java.util.stream.Collectors;
 import org.sn.myutils.annotations.NotNull;
 import org.sn.myutils.annotations.Nullable;
 
@@ -34,7 +33,7 @@ public class StackTraces {
         List<String> newList = new ArrayList<>(_ignoreClassOrPackageNameList);
         newList.addAll(ignores.stream()
                               .filter(elem -> !elem.endsWith("/")) // filter only class and package names
-                              .collect(Collectors.toList()));
+                              .toList());
         newList.sort(Comparator.naturalOrder());
         _ignoreClassOrPackageNameList = newList;
         
@@ -42,7 +41,7 @@ public class StackTraces {
         newList.addAll(ignores.stream()
                               .filter(elem -> elem.endsWith("/")) // filter only module names
                               .map(elem -> elem.substring(0, elem.length() - 1)) // remove the trailing /
-                              .collect(Collectors.toList()));
+                              .toList());
         newList.sort(Comparator.naturalOrder());
         _ignoreModuleNameList = newList;
     }
