@@ -10,7 +10,6 @@ import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
@@ -94,7 +93,7 @@ public class PriorityThreadPoolExecutorTest {
                            "end thread with priority 8",
                            "end thread with priority 7"));
         
-        assertThat(futures.stream().map(PriorityThreadPoolExecutorTest::getFromFuture).collect(Collectors.toList()),
+        assertThat(futures.stream().map(PriorityThreadPoolExecutorTest::getFromFuture).toList(),
                    Matchers.contains("44", "55", "66", "77", "88", "99"));
     }
     
@@ -125,7 +124,7 @@ public class PriorityThreadPoolExecutorTest {
                            "end thread with priority 8",
                            "end thread with priority 7"));
         
-        assertThat(futures.stream().map(PriorityThreadPoolExecutorTest::getFromFuture).collect(Collectors.toList()),
+        assertThat(futures.stream().map(PriorityThreadPoolExecutorTest::getFromFuture).toList(),
                    Matchers.contains("44", "55", "66", "77", "88", "99"));
     }
     
