@@ -11,7 +11,6 @@ import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.Future;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 
 
@@ -58,7 +57,7 @@ public class StackTraceCompletableFutureOverrideTest {
         MethodSet(Class<?> declaringClass) {
             this.methods = Arrays.stream(declaringClass.getMethods())
                                  .filter(method -> method.getDeclaringClass().equals(declaringClass))
-                                 .collect(Collectors.toList());
+                                 .toList();
         }
 
         public boolean contains(Method find) {
