@@ -156,7 +156,7 @@ public class DistributedPubSubIntegrationTest extends TestBase {
 
         assertEquals("Identification=1", centralServer.getValidTypesReceived());
         assertEquals("ClientAccepted=1", centralServer.getTypesSent());
-        assertThat(centralServer.getRemoteClients().stream().map(clientMachine -> clientMachine.getMachineId().toString()).collect(Collectors.toList()),
+        assertThat(centralServer.getRemoteClients().stream().map(clientMachine -> clientMachine.getMachineId().toString()).toList(),
                    Matchers.contains("client1"));
 
         // start a new client on a different port but with the same machine name
@@ -179,7 +179,7 @@ public class DistributedPubSubIntegrationTest extends TestBase {
 
         assertEquals("Identification=2", centralServer.getValidTypesReceived());
         assertEquals("ClientAccepted=1, ClientRejected=1", centralServer.getTypesSent());
-        assertThat(centralServer.getRemoteClients().stream().map(clientMachine -> clientMachine.getMachineId().toString()).collect(Collectors.toList()),
+        assertThat(centralServer.getRemoteClients().stream().map(clientMachine -> clientMachine.getMachineId().toString()).toList(),
                    Matchers.contains("client1"));
     }
 
@@ -622,8 +622,7 @@ public class DistributedPubSubIntegrationTest extends TestBase {
         AtomicReference<ServerIndex> serverIndexCarrot = new AtomicReference<>(ServerIndex.MIN_VALUE); // index of last carrot
         centralServer.setMessageSentListener(wrapper -> {
             var message = wrapper.getMessage();
-            if (message instanceof PublishMessage) {
-                PublishMessage publishMessage = (PublishMessage) message;
+            if (message instanceof PublishMessage publishMessage) {
                 if (publishMessage.getMessage().toString().equals("CloneableString:banana")) {
                     // the idea is to capture the server id of the first banana so that we can test download within range
                     serverIndexBanana.updateAndGet(current -> TestUtil.min(current, publishMessage.getRelayFields().getServerIndex()));
@@ -1468,8 +1467,8 @@ public class DistributedPubSubIntegrationTest extends TestBase {
             
             public boolean handle(MessageWrapper wrapper) {
                 boolean isDownload;
-                if (wrapper instanceof RelayMessageWrapper) {
-                    isDownload = ((RelayMessageWrapper) wrapper).getDownloadCommandIndex() != null;
+                if (wrapper instanceof RelayMessageWrapper relayMessageWrapper) {
+                    isDownload = relayMessageWrapper.getDownloadCommandIndex() != null;
                 } else {
                     isDownload = false;
                 }
@@ -2298,8 +2297,7 @@ public class DistributedPubSubIntegrationTest extends TestBase {
             LOGGER.log(Level.INFO, "Time taken to start servers and clients: numObjects=" + futures.size() + ", timeTaken=" + timeTaken);
         } catch (CompletionException e) {
             var cause = ExceptionUtils.unwrapCompletionException(e);
-            if (cause instanceof StartException) {
-                StartException startException = (StartException) cause;
+            if (cause instanceof StartException startException) {
                 System.err.println(startException.getMessage());
                 startException.getExceptions().entrySet().forEach(entry -> System.err.println(entry.toString()));
             }
@@ -2500,8 +2498,7 @@ class TestDistributedSocketPubSub extends DistributedSocketPubSub {
     @Override
     protected void onBeforeSendMessage(MessageBase message) {
         super.onBeforeSendMessage(message);
-        if (enableTamperServerIndex && message instanceof RelayMessageBase) {
-            RelayMessageBase relayMessage = (RelayMessageBase) message;
+        if (enableTamperServerIndex && message instanceof RelayMessageBase relayMessage) {
             relayMessage.setRelayFields(new RelayFields(System.currentTimeMillis(), ServerIndex.MIN_VALUE.increment(), new ClientMachineId("bogus")));
         }
     }
